Some method and dto variable names changed
